--- a/src/app/features/shell/shell/shell.html
+++ b/src/app/features/shell/shell/shell.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-icon>assignment</mat-icon>
-  <span style="margin-left: 8px">Decision Log</span>
+  <span style="margin-left: 8px">Ubermacht</span>
   <span style="flex: 1"></span>
   <button mat-button>Entries</button>
 </mat-toolbar>
